--- a/GitHubAwards/Base.lproj/Main.storyboard
+++ b/GitHubAwards/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                         <rect key="frame" x="0.0" y="45" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1xN-Qi-pZb" id="Qdl-P5-WI9">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m6W-LW-9MO">
@@ -181,7 +181,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="g4p-ZR-6fS" id="xAi-mb-qdi">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="49.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pg3-5x-QMM">
@@ -280,7 +280,7 @@
                                         <rect key="frame" x="0.0" y="78" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wDT-nT-b2q" id="T1C-rC-KBS">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="49.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1.png" translatesAutoresizingMaskIntoConstraints="NO" id="8tv-wg-YOC">
@@ -484,13 +484,13 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Portugal" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E1y-2W-xcZ">
-                                <rect key="frame" x="127" y="138" width="65" height="20.5"/>
+                                <rect key="frame" x="127" y="138" width="65" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5mA-3O-FLp">
-                                <rect key="frame" x="102" y="166.5" width="115" height="29"/>
+                                <rect key="frame" x="102" y="167" width="115" height="29"/>
                                 <color key="backgroundColor" red="0.40784313725490196" green="0.31764705882352939" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="115" id="hjh-G1-Aee"/>
@@ -524,13 +524,13 @@
                                                             </connections>
                                                         </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swift" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="54r-5A-drR">
-                                                            <rect key="frame" x="8" y="10" width="40.5" height="20.5"/>
+                                                            <rect key="frame" x="8" y="10" width="41" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repos:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TwM-Xg-QYW">
-                                                            <rect key="frame" x="159" y="11" width="44.5" height="17"/>
+                                                            <rect key="frame" x="159" y="11" width="45" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -742,7 +742,7 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bwk-Ht-e0I">
-                                <rect key="frame" x="50" y="205.5" width="220" height="20"/>
+                                <rect key="frame" x="50" y="206" width="220" height="20"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rih-Bv-hn3" userLabel="LeftView">
                                         <rect key="frame" x="0.0" y="7" width="23" height="5"/>
@@ -884,9 +884,9 @@
                                         <exclude reference="zlR-ox-BdZ"/>
                                         <exclude reference="qEY-tF-8ae"/>
                                         <exclude reference="3PP-l3-8e9"/>
+                                        <exclude reference="A7q-Lb-EBE"/>
                                         <exclude reference="DIP-Ww-bza"/>
                                         <exclude reference="tX9-96-lhK"/>
-                                        <exclude reference="A7q-Lb-EBE"/>
                                         <exclude reference="57S-lZ-u9K"/>
                                         <exclude reference="UYN-44-2Kb"/>
                                         <exclude reference="Zvp-vn-T7I"/>
@@ -977,9 +977,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" barStyle="black" placeholder="Search for a user" showsSearchResultsButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="58a-rn-9kZ">
-                                <rect key="frame" x="0.0" y="65" width="262" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
+                            <searchBar contentMode="redraw" barStyle="black" placeholder="Search for a user" translatesAutoresizingMaskIntoConstraints="NO" id="58a-rn-9kZ">
+                                <rect key="frame" x="0.0" y="65" width="320" height="44"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
                             </searchBar>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qlu-PQ-YZz">
                                 <rect key="frame" x="10" y="223" width="300" height="200"/>
@@ -988,25 +992,54 @@
                                     <constraint firstAttribute="height" constant="200" id="3Ua-YF-niV"/>
                                 </constraints>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z8c-w0-z8H">
-                                <rect key="frame" x="267" y="72" width="48" height="30"/>
-                                <state key="normal" title="Search"/>
-                                <connections>
-                                    <action selector="searchClicked" destination="fzt-hP-dcG" eventType="touchUpInside" id="nwN-iA-BHr"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2yu-hb-3VL">
+                                <rect key="frame" x="10" y="115" width="300" height="74"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BoS-Fa-joT">
+                                        <rect key="frame" x="8" y="8" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="I8t-5I-ULD"/>
+                                            <constraint firstAttribute="height" constant="60" id="qfB-QT-KO0"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B5U-0o-jL2">
+                                        <rect key="frame" x="76" y="26" width="85" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ONJ-fa-9Ip">
+                                        <rect key="frame" x="246" y="23" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <segue destination="U5u-hS-YPV" kind="show" identifier="UsersSearchToDetailSegue" id="1gh-ve-Z92"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="BoS-Fa-joT" firstAttribute="centerY" secondItem="2yu-hb-3VL" secondAttribute="centerY" id="ABh-vH-gRG"/>
+                                    <constraint firstItem="B5U-0o-jL2" firstAttribute="centerY" secondItem="2yu-hb-3VL" secondAttribute="centerY" id="T5D-se-wuU"/>
+                                    <constraint firstAttribute="height" constant="75" id="exN-2O-4Vh"/>
+                                    <constraint firstAttribute="trailing" secondItem="ONJ-fa-9Ip" secondAttribute="trailing" constant="8" id="f3R-68-XOR"/>
+                                    <constraint firstItem="ONJ-fa-9Ip" firstAttribute="centerY" secondItem="2yu-hb-3VL" secondAttribute="centerY" id="faj-1p-k2v"/>
+                                    <constraint firstItem="BoS-Fa-joT" firstAttribute="leading" secondItem="2yu-hb-3VL" secondAttribute="leading" constant="8" id="qo9-Ra-1AR"/>
+                                    <constraint firstItem="B5U-0o-jL2" firstAttribute="leading" secondItem="BoS-Fa-joT" secondAttribute="trailing" constant="8" id="yWN-F2-JZn"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.26472116023936165" green="0.26472116023936165" blue="0.26472116023936165" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="z8c-w0-z8H" firstAttribute="centerY" secondItem="58a-rn-9kZ" secondAttribute="centerY" id="ELx-Fx-T1N"/>
-                            <constraint firstAttribute="trailing" secondItem="z8c-w0-z8H" secondAttribute="trailing" constant="5" id="Ogi-2C-axd"/>
+                            <constraint firstItem="2yu-hb-3VL" firstAttribute="leading" secondItem="Qlu-PQ-YZz" secondAttribute="leading" id="8aQ-n9-MRh"/>
+                            <constraint firstItem="2yu-hb-3VL" firstAttribute="trailing" secondItem="Qlu-PQ-YZz" secondAttribute="trailing" id="SMu-5t-jIw"/>
                             <constraint firstItem="58a-rn-9kZ" firstAttribute="top" secondItem="XW7-GX-bFf" secondAttribute="topMargin" constant="65" id="SoS-EE-TsY"/>
                             <constraint firstAttribute="trailing" secondItem="58a-rn-9kZ" secondAttribute="trailing" constant="50" id="Vt9-Ra-Kcm"/>
                             <constraint firstItem="Qlu-PQ-YZz" firstAttribute="leading" secondItem="XW7-GX-bFf" secondAttribute="leading" constant="10" id="WHl-0p-Iuh"/>
-                            <constraint firstItem="z8c-w0-z8H" firstAttribute="leading" secondItem="58a-rn-9kZ" secondAttribute="trailing" constant="5" id="aaE-IL-bAo"/>
+                            <constraint firstItem="2yu-hb-3VL" firstAttribute="top" secondItem="58a-rn-9kZ" secondAttribute="bottom" constant="6" id="Zap-KB-bP0"/>
                             <constraint firstItem="58a-rn-9kZ" firstAttribute="leading" secondItem="XW7-GX-bFf" secondAttribute="leading" id="d87-de-FZn"/>
                             <constraint firstAttribute="trailing" secondItem="Qlu-PQ-YZz" secondAttribute="trailing" constant="10" id="i2c-YC-SEZ"/>
                             <constraint firstItem="T9O-Sa-4tC" firstAttribute="top" secondItem="Qlu-PQ-YZz" secondAttribute="bottom" constant="8" id="wZD-ds-7fe"/>
+                            <constraint firstAttribute="trailing" secondItem="58a-rn-9kZ" secondAttribute="trailing" id="xRj-tk-bsL"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -1017,11 +1050,22 @@
                     <navigationItem key="navigationItem" title="Users" id="Ptd-Im-4Jz"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
+                        <outlet property="avatarImageView" destination="BoS-Fa-joT" id="mPg-iJ-Ure"/>
                         <outlet property="resultsScroll" destination="Qlu-PQ-YZz" id="h3t-cf-ipx"/>
+                        <outlet property="searchDisplayController" destination="jWh-Iu-5Cp" id="e7f-tE-t1a"/>
                         <outlet property="searchField" destination="58a-rn-9kZ" id="coq-HQ-q34"/>
+                        <outlet property="userLoginLabel" destination="B5U-0o-jL2" id="0sW-NV-kPZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cXI-2m-Rih" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="jWh-Iu-5Cp">
+                    <connections>
+                        <outlet property="delegate" destination="fzt-hP-dcG" id="yxy-T1-m3X"/>
+                        <outlet property="searchContentsController" destination="fzt-hP-dcG" id="Ux1-Ta-I38"/>
+                        <outlet property="searchResultsDataSource" destination="fzt-hP-dcG" id="T0M-vF-SWq"/>
+                        <outlet property="searchResultsDelegate" destination="fzt-hP-dcG" id="bPv-a3-3NK"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="1916" y="427"/>
         </scene>
@@ -1071,6 +1115,6 @@
         <image name="Trophy" width="1200" height="1200"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="yv2-Fd-0S7"/>
+        <segue reference="1gh-ve-Z92"/>
     </inferredMetricsTieBreakers>
 </document>
