--- a/GitHubAwards/CustomViews/AlertView.xib
+++ b/GitHubAwards/CustomViews/AlertView.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="340" height="48"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oz9-rd-A8b">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oz9-rd-A8b">
                     <rect key="frame" x="0.0" y="0.0" width="340" height="48"/>
                     <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
@@ -24,14 +24,13 @@
                     <rect key="frame" x="0.0" y="0.0" width="340" height="48"/>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An error occurred. Please try again" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kh2-V6-I8E">
-                    <rect key="frame" x="46" y="14" width="286" height="20.5"/>
+                    <rect key="frame" x="46" y="14" width="286" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GitHub" translatesAutoresizingMaskIntoConstraints="NO" id="N06-Mp-xte">
                     <rect key="frame" x="8" y="9" width="30" height="30"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="OCT-kD-RCh"/>
                         <constraint firstAttribute="height" constant="30" id="lJN-kC-zD6"/>
